--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Jeel1.jpg" alt="Jeel's Profile Picture"></td>
+      <td><img src="Jeel.jpg" alt="Jeel's Profile Picture"></td>
       <td>  <h1>Jeel</h1>
         <p><em>Third Year Engineering Student.</em></p>
         <p>I am a Web Developer.I love coding.</p></td>
